--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,79 @@
+/* Contents
+-- GA -> growing alpha
+-- FA -> growing alpha
+*/
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: green;
+  background-image: url(./images/Bangladesh.png);
+  background-repeat: no-repeat;
+  background-size: 100vw 100vh;
+  background-attachment: fixed;
+  color: white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.info-data {
+  display: flex;
+  justify-content: space-between;
+  padding: 6vw;
 }
+.info-data img {
+  width: 30vw;
+  border-radius: 50%;
+}
+.info-data .text-info {
+  width: 43%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding: 5.5vw;
+}
+.info-data .text-info #name {
+  font-size: 5.75vw;
+  font-weight: bold;
+}
+.info-data .text-info #profession {
+  font-size: 4.5vw;
+  letter-spacing: -0.04em;
+  color: rgba(255, 255, 255, 0.6509803922);
+}
+
+.info-container .container-data {
+  background-color: rgba(0, 0, 0, 0.3803921569);
+  margin: 5vw;
+  padding: 3vw;
+  border-radius: 12px;
+  backdrop-filter: blur(4px);
+  margin-top: calc(5vw + 2.5vh);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.16), 0 4px 4px rgba(0, 0, 0, 0.2);
+}
+.info-container .container-data #description {
+  position: absolute;
+  top: calc(-1.55vh - 3vw);
+  left: 13px;
+  font-weight: bold;
+  letter-spacing: 0.1em;
+  font-variant-caps: all-small-caps;
+}
+.info-container .container-data .iconify {
+  display: inline-block;
+  color: #759a65;
+  margin-right: 8px;
+}
+
+.settings {
+  background-color: rgba(87, 0, 0, 0.6509803922);
+  margin: 5vw;
+  padding: 3vw;
+  border-radius: 10px;
+  backdrop-filter: blur(3px);
+  margin-top: 0;
+}
+.settings label {
+  font-variant-caps: petite-caps;
+  margin-left: 10px;
+  font-weight: bold;
+  letter-spacing: 0.1em;
+  font-size: 0.9em;
+}
+
+/*# sourceMappingURL=index.css.map */
