--- a/src/styles/data_showcase.scss
+++ b/src/styles/data_showcase.scss
@@ -1,16 +1,19 @@
 
 .data-showcase {
-    background-color: var(--accent-color__500);
+    background-color: hsla(0, 58.1%, 50.4%, 0.31);
     width: 70%;
-    margin: auto;
+    margin: 16px auto;
+    margin-bottom: 16px;
     border-radius: 4px;
     box-shadow: 0 3px 8px var(--accent-color__900);
     flex-direction: column;
     padding: 15px 30px;
+    font-feature-settings: "smcp", "c2sc";
     font-variant-caps: all-small-caps;
     line-height: 2;
     animation: expand-from-left 500ms;
     position: relative;
+    margin-bottom: -8px;
 
     label span {
         padding-left: 10px;
