--- a/src/styles/specific_data.scss
+++ b/src/styles/specific_data.scss
@@ -9,10 +9,11 @@
 
         .title {
             font-variant-caps: all-small-caps;
-            margin-bottom: -12px;
+            margin-bottom: -6px;
             color: var(--accent-color__500);
             letter-spacing: 0.06em;
             font-weight: bold;
+            padding-left: 10px;
         }
 
         .info {
@@ -21,7 +22,25 @@
             letter-spacing: -0.03em;
             font-weight: bold;
             font-size: 5.3vw;
-            margin-top: -3px;
+            background-color: hsla(178, 50.4%, 22.9%, 0.31);
+            padding: 6px 9px;
+            box-shadow: 0 9px 15px -7px hsla(15, 100%, 5.5%, 0.57);
+            border-radius: 7px;
+            text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
+            display: flex;
+            align-items: center;
+
+            svg {
+                margin-right: 5px;
+                color: var(--primary-color__300);
+                filter: drop-shadow(1px 1px 2px #0000009e);
+            }
+
+            div {
+                flex: 1;
+                font-size: 4.9vw;
+                letter-spacing: 0.015em;
+            }
         }
     }
 }
