Added more data

--- a/src/styles/specific_data.scss
+++ b/src/styles/specific_data.scss
@@ -23,7 +23,7 @@
             font-weight: bold;
             font-size: 5.3vw;
             background-color: hsla(178, 50.4%, 22.9%, 0.31);
-            padding: 6px 9px;
+            padding: 1.3vh 4vw;
             box-shadow: 0 9px 15px -7px hsla(15, 100%, 5.5%, 0.57);
             border-radius: 7px;
             text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
