Refactored code and slightly modified layout

--- a/src/styles/specific_data.scss
+++ b/src/styles/specific_data.scss
@@ -34,6 +34,7 @@
                 margin-right: 5px;
                 color: var(--primary-color__300);
                 filter: drop-shadow(1px 1px 2px #0000009e);
+                flex-shrink: 0.2;
             }
 
             div {
