--- a/src/styles/basic_data.scss
+++ b/src/styles/basic_data.scss
@@ -5,11 +5,52 @@
     padding-top: 40px;
     align-items: center;
 
-    img {
-        $size: 24vw;
+    $size: 24vw;
+    img, .options-overlay, .image-holder {
         width: $size;
         height: $size;
         border-radius: 21px;
+    }
+
+    img, .options-overlay {
+        position: absolute;
+    }
+
+    .image-holder {
+        .options-overlay  {
+            z-index: 1;
+            transition: 200ms;
+
+        }
+
+        .non-visible {
+            &:hover {
+                background-color: var(--accent-color__700);
+                opacity: 0.5;
+                filter: brightness(60%);
+            }
+
+            & * {
+                display: none;
+            }
+        }
+
+        .visible {
+            background-color: hsla(15.1, 97.5%, 22%, 0.9);
+            opacity: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 33px;
+
+            svg {
+                filter: drop-shadow(1px 1px 3px #00000094);
+            }
+        }
+    }
+
+
+    img {
         box-shadow: 0px 24px 43px hsla(0deg, 95.1%, 15.9%, 0.5);
         object-fit: cover;
         object-position: 0px -13vw;
